crimild_trace()

add_library( crimild_core OBJECT )

target_sources( 
    crimild_core
    
    PUBLIC
    Animation/Accumulator.hpp
    Animation/Animation.hpp
    Animation/Channel.hpp
    Animation/ChannelImpl.hpp
    Animation/Clip.hpp
    Animation/Skeleton.hpp   
    Audio/AudioListener.hpp
    Audio/AudioSource.hpp
    Behaviors/Actions/AnimateContextValue.hpp
    Behaviors/Actions/AnimateParticleSystem.hpp
    Behaviors/Actions/AnimateSettingValue.hpp
    Behaviors/Actions/ClampPosition.hpp
    Behaviors/Actions/ClampPositionToView.hpp
    Behaviors/Actions/ClearTargets.hpp
    Behaviors/Actions/CopyTransformFromTarget.hpp
    Behaviors/Actions/EnableNode.hpp
    Behaviors/Actions/ExecuteBehavior.hpp
    Behaviors/Actions/ExecuteBehaviorOnTarget.hpp
    Behaviors/Actions/FindTarget.hpp
    Behaviors/Actions/FollowPath.hpp
    Behaviors/Actions/LoadScene.hpp
    Behaviors/Actions/LookAt.hpp
    Behaviors/Actions/MotionApply.hpp
    Behaviors/Actions/MotionAvoidOthers.hpp
    Behaviors/Actions/MotionAvoidWalls.hpp
    Behaviors/Actions/MotionComputePathToTarget.hpp
    Behaviors/Actions/MotionFromInput.hpp
    Behaviors/Actions/MotionReset.hpp
    Behaviors/Actions/MotionSeek.hpp
    Behaviors/Actions/PrintMessage.hpp
    Behaviors/Actions/ResetNavigation.hpp
    Behaviors/Actions/Rotate.hpp
    Behaviors/Actions/SetContextValue.hpp
    Behaviors/Actions/SetSettingValue.hpp
    Behaviors/Actions/Success.hpp
    Behaviors/Actions/Transform.hpp
    Behaviors/Actions/Trigger.hpp
    Behaviors/Actions/Wait.hpp
    Behaviors/Composites/Composite.hpp
    Behaviors/Composites/Parallel.hpp
    Behaviors/Composites/Selector.hpp
    Behaviors/Composites/Sequence.hpp
    Behaviors/Conditions/DistanceToTarget.hpp
    Behaviors/Conditions/HasTargets.hpp
    Behaviors/Conditions/IsAtTarget.hpp
    Behaviors/Conditions/TestContextValue.hpp
    Behaviors/Conditions/TestInputAxis.hpp
    Behaviors/Conditions/TestSettingValue.hpp
    Behaviors/Decorators/Decorator.hpp
    Behaviors/Decorators/Inverter.hpp
    Behaviors/Decorators/Repeat.hpp
    Behaviors/Decorators/RepeatUntilFail.hpp
    Behaviors/Decorators/RepeatUntilSuccess.hpp
    Behaviors/Decorators/Succeeder.hpp
    Behaviors/Decorators/Throttle.hpp
    Behaviors/Behavior.hpp
    Behaviors/BehaviorContext.hpp
    Behaviors/BehaviorController.hpp
    Behaviors/BehaviorTree.hpp
    Behaviors/withBehavior.hpp
    Boundings/AABBBoundingVolume.hpp
    Boundings/BoundingVolume.hpp
    Boundings/Box2DBoundingVolume.hpp
    Boundings/OrientedBoxBoundingVolume.hpp
    Boundings/PlaneBoundingVolume.hpp
    Boundings/SphereBoundingVolume.hpp
    Coding/Codable.hpp
    Coding/Decoder.hpp
    Coding/EncodedData.hpp
    Coding/EncodedObject.hpp
    Coding/Encoder.hpp
    Coding/FileDecoder.hpp
    Coding/FileEncoder.hpp
    Coding/MemoryDecoder.hpp
    Coding/MemoryEncoder.hpp
    Coding/Tags.hpp
    Components/AnimatorComponent.hpp
    Components/AudioListenerComponent.hpp
    Components/AudioSourceComponent.hpp
    Components/BillboardComponent.hpp
    Components/FreeLookCameraComponent.hpp
    Components/LambdaComponent.hpp
    Components/MaterialComponent.hpp
    Components/MotionStateComponent.hpp
    Components/NodeComponent.hpp
    Components/NodeComponentCatalog.hpp
    Components/OrbitComponent.hpp
    Components/PathComponent.hpp
    Components/RenderStateComponent.hpp
    Components/RotationComponent.hpp
    Components/SingleValueComponent.hpp
    Components/SkinnedMeshComponent.hpp
    Components/TimerComponent.hpp
    Components/UIResponder.hpp
    Concurrency/Async.hpp
    Concurrency/Job.hpp
    Concurrency/JobScheduler.hpp
    Concurrency/WorkStealingDeque.hpp
    Crimild.hpp
    Debug/DebugDrawManager.hpp
    Debug/DebugRenderComponent.hpp
    Debug/DebugRenderHelper.hpp
    Debug/SceneDebugDump.hpp
    Exceptions/Exception.hpp
    Exceptions/FileNotFoundException.hpp
    Exceptions/HasParentException.hpp
    Exceptions/InvalidFileFormatException.hpp
    Exceptions/RuntimeException.hpp
    Foundation/Chunk.hpp
    Foundation/Containers
    Foundation/Containers/Array.hpp
    Foundation/Containers/Digraph.hpp
    Foundation/Containers/List.hpp
    Foundation/Containers/Map.hpp
    Foundation/Containers/PriorityQueue.hpp
    Foundation/Containers/Queue.hpp
    Foundation/Containers/Set.hpp
    Foundation/Containers/Stack.hpp
    Foundation/FilePath.hpp
    Foundation/FixedAllocator.hpp
    Foundation/KeyValuePair.hpp
    Foundation/Log.hpp
    Foundation/Macros.hpp
    Foundation/Memory.hpp
    Foundation/NamedObject.hpp
    Foundation/NonCopyable.hpp
    Foundation/ObjectFactory.hpp
    Foundation/Observable.hpp
    Foundation/Policies
    Foundation/Policies/CachePolicy.hpp
    Foundation/Policies/ThreadingPolicy.hpp
    Foundation/Profiler.hpp
    Foundation/RTTI.hpp
    Foundation/SharedObject.hpp
    Foundation/Singleton.hpp
    Foundation/SmallObject.hpp
    Foundation/SmallObjectAllocator.hpp
    Foundation/StringUtils.hpp
    Foundation/Types.hpp
    Foundation/Variant.hpp
    Foundation/Version.hpp
    Loaders/OBJLoader.hpp
    Mathematics/abs.hpp
    Mathematics/Bounds3.hpp
    Mathematics/Bounds3_bisect.hpp
    Mathematics/Bounds3_centroid.hpp
    Mathematics/Bounds3_combine.hpp
    Mathematics/Bounds3_diagonal.hpp
    Mathematics/Bounds3_easing.hpp
    Mathematics/Bounds3_equality.hpp
    Mathematics/Bounds3_expand.hpp
    Mathematics/Bounds3_inside.hpp
    Mathematics/Bounds3_intersect.hpp
    Mathematics/Bounds3_io.hpp
    Mathematics/Bounds3_isNaN.hpp
    Mathematics/Bounds3_max.hpp
    Mathematics/Bounds3_min.hpp
    Mathematics/Bounds3_overlaps.hpp
    Mathematics/Bounds3_surfaceArea.hpp
    Mathematics/Bounds3_volume.hpp
    Mathematics/Box.hpp
    Mathematics/Box_normal.hpp
    Mathematics/ceil.hpp
    Mathematics/clamp.hpp
    Mathematics/Clock.hpp
    Mathematics/ColorRGB.hpp
    Mathematics/ColorRGBA.hpp
    Mathematics/ColorRGBAOps.hpp
    Mathematics/ColorRGBOps.hpp
    Mathematics/ColorRGB_isZero.hpp
    Mathematics/cross.hpp
    Mathematics/Cylinder.hpp
    Mathematics/Cylinder_normal.hpp
    Mathematics/distance.hpp
    Mathematics/dot.hpp
    Mathematics/easing.hpp
    Mathematics/expand.hpp
    Mathematics/factorial.hpp
    Mathematics/floor.hpp
    Mathematics/Frustum.hpp
    Mathematics/get_ptr.hpp
    Mathematics/Interpolation.hpp
    Mathematics/intersect.hpp
    Mathematics/Intersection.hpp
    Mathematics/io.hpp
    Mathematics/isEqual.hpp
    Mathematics/isInfinity.hpp
    Mathematics/isNaN.hpp
    Mathematics/isZero.hpp
    Mathematics/length.hpp
    Mathematics/LineSegment3.hpp
    Mathematics/Matrix3.hpp
    Mathematics/Matrix3_constants.hpp
    Mathematics/Matrix3_determinant.hpp
    Mathematics/Matrix3_equality.hpp
    Mathematics/Matrix3_inverse.hpp
    Mathematics/Matrix3_operators.hpp
    Mathematics/Matrix3_transpose.hpp
    Mathematics/Matrix4.hpp
    Mathematics/Matrix4_constants.hpp
    Mathematics/Matrix4_determinant.hpp
    Mathematics/Matrix4_inverse.hpp
    Mathematics/Matrix4_operators.hpp
    Mathematics/Matrix4_transpose.hpp
    Mathematics/max.hpp
    Mathematics/min.hpp
    Mathematics/Normal3.hpp
    Mathematics/normalize.hpp
    Mathematics/Numbers.hpp
    Mathematics/Numeric.hpp
    Mathematics/ortho.hpp
    Mathematics/orthonormalization.hpp
    Mathematics/permutation.hpp
    Mathematics/perspective.hpp
    Mathematics/Plane3.hpp
    Mathematics/Point2.hpp
    Mathematics/Point3.hpp
    Mathematics/Point3Ops.hpp
    Mathematics/Point3_isInfinity.hpp
    Mathematics/pow.hpp
    Mathematics/project.hpp
    Mathematics/Quaternion.hpp
    Mathematics/Random.hpp
    Mathematics/Ray3.hpp
    Mathematics/Ray3_operators.hpp
    Mathematics/Ray_apply.hpp
    Mathematics/README.md
    Mathematics/Rect.hpp
    Mathematics/reflect.hpp
    Mathematics/refract.hpp
    Mathematics/Root.hpp
    Mathematics/round.hpp
    Mathematics/Series.hpp
    Mathematics/sign.hpp
    Mathematics/Size2D.hpp
    Mathematics/Size3D.hpp
    Mathematics/Sphere.hpp
    Mathematics/Sphere_normal.hpp
    Mathematics/sqrt.hpp
    Mathematics/swizzle.hpp
    Mathematics/Traits.hpp
    Mathematics/Transformation.hpp
    Mathematics/Transformation_apply.hpp
    Mathematics/Transformation_constants.hpp
    Mathematics/Transformation_easing.hpp
    Mathematics/Transformation_euler.hpp
    Mathematics/Transformation_inverse.hpp
    Mathematics/Transformation_isIdentity.hpp
    Mathematics/Transformation_lookAt.hpp
    Mathematics/Transformation_operators.hpp
    Mathematics/Transformation_rotation.hpp
    Mathematics/Transformation_scale.hpp
    Mathematics/Transformation_translation.hpp
    Mathematics/Triangle.hpp
    Mathematics/Triangle_edges.hpp
    Mathematics/Triangle_normal.hpp
    Mathematics/trigonometry.hpp
    Mathematics/Tuple2.hpp
    Mathematics/Tuple3.hpp
    Mathematics/Tuple4.hpp
    Mathematics/tupleBuilder.hpp
    Mathematics/tupleComponents.hpp
    Mathematics/Vector2.hpp
    Mathematics/Vector3.hpp
    Mathematics/Vector3Ops.hpp
    Mathematics/Vector4.hpp
    Mathematics/whichSide.hpp
    Messaging/MessageQueue.hpp
    Navigation/NavigationCell.hpp
    Navigation/NavigationCellEdge.hpp
    Navigation/NavigationController.hpp
    Navigation/NavigationMesh.hpp
    Navigation/NavigationMeshContainer.hpp
    Navigation/NavigationMeshOBJ.hpp
    ParticleSystem/Generators/AccelerationParticleGenerator.hpp
    ParticleSystem/Generators/BoxPositionParticleGenerator.hpp
    ParticleSystem/Generators/CirclePositionParticleGenerator.hpp
    ParticleSystem/Generators/ColorParticleGenerator.hpp
    ParticleSystem/Generators/DefaultValueParticleGenerator.hpp
    ParticleSystem/Generators/EulerAnglesParticleGenerator.hpp
    ParticleSystem/Generators/GridPositionParticleGenerator.hpp
    ParticleSystem/Generators/NodePositionParticleGenerator.hpp
    ParticleSystem/Generators/OrbitPositionParticleGenerator.hpp
    ParticleSystem/Generators/RandomValueParticleGenerator.hpp
    ParticleSystem/Generators/SpherePositionParticleGenerator.hpp
    ParticleSystem/Generators/SphereVelocityParticleGenerator.hpp
    ParticleSystem/Generators/TimeParticleGenerator.hpp
    ParticleSystem/Generators/UniformScaleParticleGenerator.hpp
    ParticleSystem/Generators/VelocityParticleGenerator.hpp
    ParticleSystem/ParticleAttribArray.hpp
    ParticleSystem/ParticleData.hpp
    ParticleSystem/ParticleSystemComponent.hpp
    ParticleSystem/Renderers/AnimatedSpriteParticleRenderer.hpp
    ParticleSystem/Renderers/InstancedParticleRenderer.hpp
    ParticleSystem/Renderers/NodeParticleRenderer.hpp
    ParticleSystem/Renderers/OrientedQuadParticleRenderer.hpp
    ParticleSystem/Renderers/PointSpriteParticleRenderer.hpp
    ParticleSystem/Updaters/AttractorParticleUpdater.hpp
    ParticleSystem/Updaters/CameraSortParticleUpdater.hpp
    ParticleSystem/Updaters/ColorParticleUpdater.hpp
    ParticleSystem/Updaters/EulerParticleUpdater.hpp
    ParticleSystem/Updaters/FloorParticleUpdater.hpp
    ParticleSystem/Updaters/PositionColorParticleUpdater.hpp
    ParticleSystem/Updaters/PositionVelocityParticleUpdater.hpp
    ParticleSystem/Updaters/SetAttribValueParticleUpdater.hpp
    ParticleSystem/Updaters/TimeParticleUpdater.hpp
    ParticleSystem/Updaters/UniformScaleParticleUpdater.hpp
    ParticleSystem/Updaters/VelocityColorParticleUpdater.hpp
    ParticleSystem/Updaters/ZSortParticleUpdater.hpp
    Primitives/ArcPrimitive.hpp
    Primitives/ArrowPrimitive.hpp
    Primitives/BoxPrimitive.hpp
    Primitives/ConePrimitive.hpp
    Primitives/CylinderPrimitive.hpp
    Primitives/KleinBottlePrimitive.hpp
    Primitives/MobiusStripPrimitive.hpp
    Primitives/NewellTeapotPrimitive.hpp
    Primitives/ParametricPrimitive.hpp
    Primitives/ParametricSpherePrimitive.hpp
    Primitives/Primitive.hpp
    Primitives/QuadPrimitive.hpp
    Primitives/SpherePrimitive.hpp
    Primitives/TorusPrimitive.hpp
    Primitives/TrefoilKnotPrimitive.hpp
    Rendering/Buffer.hpp
    Rendering/BufferAccessor.hpp
    Rendering/BufferView.hpp
    Rendering/Catalog.hpp
    Rendering/ColorBlendState.hpp
    Rendering/ColorMaskState.hpp
    Rendering/CommandBuffer.hpp
    Rendering/CompareOp.hpp
    Rendering/ComputePass.hpp
    Rendering/DepthStencilState.hpp
    Rendering/DescriptorSet.hpp
    Rendering/Extent.hpp
    Rendering/Font.hpp
    Rendering/Format.hpp
    Rendering/Framebuffer.hpp
    Rendering/FrameGraphOperation.hpp
    Rendering/FrameGraphResource.hpp
    Rendering/Image.hpp
    Rendering/ImageManager.hpp
    Rendering/ImageTGA.hpp
    Rendering/ImageView.hpp
    Rendering/IndexBuffer.hpp
    Rendering/Material.hpp
    Rendering/Materials/PrincipledBSDFMaterial.hpp
    Rendering/Materials/PrincipledVolumeMaterial.hpp
    Rendering/Materials/SkyboxMaterial.hpp
    Rendering/Materials/UnlitMaterial.hpp
    Rendering/Materials/WorldGridMaterial.hpp
    Rendering/Operations/Operations.hpp
    Rendering/Operations/Operations_computeBuffer.hpp
    Rendering/Operations/Operations_computeImage.hpp
    Rendering/Operations/Operations_computeRT.hpp
    Rendering/Operations/Operations_debugLightCascades.hpp
    Rendering/Operations/Operations_debugShadowAtlas.hpp
    Rendering/Operations/Operations_softRT.hpp
    Rendering/Operations/Operations_ssao.hpp
    Rendering/Operations/OperationUtils.hpp
    Rendering/Pipeline.hpp
    Rendering/Programs/LitShaderProgram.frag
    Rendering/Programs/LitShaderProgram.hpp
    Rendering/Programs/LitShaderProgram.vert
    Rendering/Programs/SkyboxShaderProgram.hpp
    Rendering/Programs/UnlitShaderProgram.hpp
    Rendering/RasterizationState.hpp
    Rendering/RenderableSet.hpp
    Rendering/Renderer.hpp
    Rendering/RenderPass.hpp
    Rendering/RenderQueue.hpp
    Rendering/RenderResource.hpp
    Rendering/RenderState.hpp
    Rendering/Sampler.hpp
    Rendering/ScalingMode.hpp
    Rendering/ScenePass.hpp
    Rendering/Shader.hpp
    Rendering/ShaderLibrary.hpp
    Rendering/ShaderLocation.hpp
    Rendering/ShaderProgram.hpp
    Rendering/ShaderProgramLibrary.hpp
    Rendering/ShaderUniform.hpp
    Rendering/ShaderUniformImpl.hpp
    Rendering/ShadowMap.hpp
    Rendering/SkinnedMesh.hpp
    Rendering/StorageBuffer.hpp
    Rendering/Swapchain.hpp
    Rendering/SystemFont.hpp
    Rendering/SystemFontData.hpp
    Rendering/Texture.hpp
    Rendering/UniformBuffer.hpp
    Rendering/Uniforms/CallbackUniformBuffer.hpp
    Rendering/Uniforms/CameraViewProjectionUniformBuffer.hpp
    Rendering/Uniforms/LightingUniform.hpp
    Rendering/Uniforms/LightUniform.hpp
    Rendering/Uniforms/ModelUniformBuffer.hpp
    Rendering/Uniforms/ModelViewProjectionUniformBuffer.hpp
    Rendering/Vertex.hpp
    Rendering/VertexAttribute.hpp
    Rendering/VertexBuffer.hpp
    Rendering/VertexLayout.hpp
    Rendering/ViewportDimensions.hpp
    SceneGraph/Camera.hpp
    SceneGraph/CSGNode.hpp
    SceneGraph/Geometry.hpp
    SceneGraph/Group.hpp
    SceneGraph/Light.hpp
    SceneGraph/Node.hpp
    SceneGraph/Node_io.hpp
    SceneGraph/Node_withTransformation.hpp
    SceneGraph/NullNode.hpp
    SceneGraph/Skybox.hpp
    SceneGraph/Switch.hpp
    SceneGraph/Text.hpp
    Simulation/AssetManager.hpp
    Simulation/Console/Commands/EchoConsoleCommand.hpp
    Simulation/Console/Commands/SetConsoleCommand.hpp
    Simulation/Console/Console.hpp
    Simulation/Console/ConsoleCommand.hpp
    Simulation/Event.hpp
    Simulation/FileSystem.hpp
    Simulation/Input.hpp
    Simulation/Settings.hpp
    Simulation/Simulation.hpp
    Simulation/Systems/AudioSystem.hpp
    Simulation/Systems/CaptureSystem.hpp
    Simulation/Systems/ConsoleSystem.hpp
    Simulation/Systems/DebugSystem.hpp
    Simulation/Systems/RenderSystem.hpp
    Simulation/Systems/StreamingSystem.hpp
    Simulation/Systems/System.hpp
    Simulation/Systems/UISystem.hpp
    Simulation/Systems/UpdateSystem.hpp
    UI/UIBackground.hpp
    UI/UIButton.hpp
    UI/UICanvas.hpp
    UI/UIFrame.hpp
    UI/UIFrameConstraint.hpp
    UI/UIFrameConstraintMaker.hpp
    UI/UILabel.hpp
    Visitors/Apply.hpp
    Visitors/ApplyToGeometries.hpp
    Visitors/BinTreeScene.hpp
    Visitors/ComputeRenderQueue.hpp
    Visitors/FetchCameras.hpp
    Visitors/FetchLights.hpp
    Visitors/IntersectWorld.hpp
    Visitors/NodeVisitor.hpp
    Visitors/ParallelApply.hpp
    Visitors/Picking.hpp
    Visitors/RTAcceleration.hpp
    Visitors/SelectNodes.hpp
    Visitors/ShallowCopy.hpp
    Visitors/StartComponents.hpp
    Visitors/UpdateComponents.hpp
    Visitors/UpdateRenderState.hpp
    Visitors/UpdateWorldState.hpp

    PRIVATE
    Animation/Animation.cpp
    Animation/Channel.cpp
    Animation/Clip.cpp
    Animation/Skeleton.cpp
    Audio/AudioListener.cpp
    Audio/AudioSource.cpp
    Behaviors/Actions/AnimateContextValue.cpp
    Behaviors/Actions/AnimateParticleSystem.cpp
    Behaviors/Actions/AnimateSettingValue.cpp
    Behaviors/Actions/ClampPosition.cpp
    Behaviors/Actions/ClampPositionToView.cpp
    Behaviors/Actions/ClearTargets.cpp
    Behaviors/Actions/CopyTransformFromTarget.cpp
    Behaviors/Actions/EnableNode.cpp
    Behaviors/Actions/ExecuteBehavior.cpp
    Behaviors/Actions/ExecuteBehaviorOnTarget.cpp
    Behaviors/Actions/FindTarget.cpp
    Behaviors/Actions/FollowPath.cpp
    Behaviors/Actions/LoadScene.cpp
    Behaviors/Actions/LookAt.cpp
    Behaviors/Actions/MotionApply.cpp
    Behaviors/Actions/MotionAvoidOthers.cpp
    Behaviors/Actions/MotionAvoidWalls.cpp
    Behaviors/Actions/MotionComputePathToTarget.cpp
    Behaviors/Actions/MotionFromInput.cpp
    Behaviors/Actions/MotionReset.cpp
    Behaviors/Actions/MotionSeek.cpp
    Behaviors/Actions/PrintMessage.cpp
    Behaviors/Actions/ResetNavigation.cpp
    Behaviors/Actions/Rotate.cpp
    Behaviors/Actions/SetContextValue.cpp
    Behaviors/Actions/SetSettingValue.cpp
    Behaviors/Actions/Success.cpp
    Behaviors/Actions/Transform.cpp
    Behaviors/Actions/Trigger.cpp
    Behaviors/Actions/Wait.cpp
    Behaviors/Composites/Composite.cpp
    Behaviors/Composites/Parallel.cpp
    Behaviors/Composites/Selector.cpp
    Behaviors/Composites/Sequence.cpp
    Behaviors/Conditions/DistanceToTarget.cpp
    Behaviors/Conditions/HasTargets.cpp
    Behaviors/Conditions/IsAtTarget.cpp
    Behaviors/Conditions/TestContextValue.cpp
    Behaviors/Conditions/TestInputAxis.cpp
    Behaviors/Conditions/TestSettingValue.cpp
    Behaviors/Decorators/Decorator.cpp
    Behaviors/Decorators/Inverter.cpp
    Behaviors/Decorators/Repeat.cpp
    Behaviors/Decorators/RepeatUntilFail.cpp
    Behaviors/Decorators/RepeatUntilSuccess.cpp
    Behaviors/Decorators/Succeeder.cpp
    Behaviors/Behavior.cpp
    Behaviors/BehaviorContext.cpp
    Behaviors/BehaviorController.cpp
    Behaviors/BehaviorTree.cpp
    Boundings/AABBBoundingVolume.cpp
    Boundings/BoundingVolume.cpp
    Boundings/Box2DBoundingVolume.cpp
    Boundings/OrientedBoxBoundingVolume.cpp
    Boundings/PlaneBoundingVolume.cpp
    Boundings/SphereBoundingVolume.cpp
    Coding/Codable.cpp
    Coding/Encoder.cpp
    Coding/FileDecoder.cpp
    Coding/FileEncoder.cpp
    Coding/MemoryDecoder.cpp
    Coding/MemoryEncoder.cpp
    Coding/Tags.cpp
    Components/AudioListenerComponent.cpp
    Components/AudioSourceComponent.cpp
    Components/BillboardComponent.cpp
    Components/FreeLookCameraComponent.cpp
    Components/LambdaComponent.cpp
    Components/MaterialComponent.cpp
    Components/MotionStateComponent.cpp
    Components/NodeComponent.cpp
    Components/OrbitComponent.cpp
    Components/PathComponent.cpp
    Components/RenderStateComponent.cpp
    Components/RotationComponent.cpp
    Components/SkinnedMeshComponent.cpp
    Components/TimerComponent.cpp
    Components/UIResponder.cpp
    Concurrency/Async.cpp
    Concurrency/Job.cpp
    Concurrency/JobScheduler.cpp
    Crimild.cpp
    Debug/DebugDrawManager.cpp
    Debug/DebugRenderComponent.cpp
    Debug/DebugRenderHelper.cpp
    Debug/SceneDebugDump.cpp
    Foundation/Chunk.cpp
    Foundation/FilePath.cpp
    Foundation/FixedAllocator.cpp
    Foundation/Log.cpp
    Foundation/NamedObject.cpp
    Foundation/ObjectFactory.cpp
    Foundation/Profiler.cpp
    Foundation/SmallObjectAllocator.cpp
    Foundation/Variant.cpp
    Foundation/Version.cpp
    Loaders/OBJLoader.cpp
    Mathematics/Clock.cpp
    Mathematics/Random.cpp
    Messaging/MessageQueue.cpp
    Navigation/NavigationCell.cpp
    Navigation/NavigationCellEdge.cpp
    Navigation/NavigationController.cpp
    Navigation/NavigationMesh.cpp
    Navigation/NavigationMeshContainer.cpp
    Navigation/NavigationMeshOBJ.cpp
    ParticleSystem/Generators/AccelerationParticleGenerator.cpp
    ParticleSystem/Generators/BoxPositionParticleGenerator.cpp
    ParticleSystem/Generators/CirclePositionParticleGenerator.cpp
    ParticleSystem/Generators/ColorParticleGenerator.cpp
    ParticleSystem/Generators/EulerAnglesParticleGenerator.cpp
    ParticleSystem/Generators/GridPositionParticleGenerator.cpp
    ParticleSystem/Generators/NodePositionParticleGenerator.cpp
    ParticleSystem/Generators/OrbitPositionParticleGenerator.cpp
    ParticleSystem/Generators/SpherePositionParticleGenerator.cpp
    ParticleSystem/Generators/SphereVelocityParticleGenerator.cpp
    ParticleSystem/Generators/TimeParticleGenerator.cpp
    ParticleSystem/Generators/UniformScaleParticleGenerator.cpp
    ParticleSystem/Generators/VelocityParticleGenerator.cpp
    ParticleSystem/ParticleAttribArray.cpp
    ParticleSystem/ParticleData.cpp
    ParticleSystem/ParticleSystemComponent.cpp
    ParticleSystem/Renderers/AnimatedSpriteParticleRenderer.cpp
    ParticleSystem/Renderers/InstancedParticleRenderer.cpp
    ParticleSystem/Renderers/NodeParticleRenderer.cpp
    ParticleSystem/Renderers/OrientedQuadParticleRenderer.cpp
    ParticleSystem/Renderers/PointSpriteParticleRenderer.cpp
    ParticleSystem/Updaters/AttractorParticleUpdater.cpp
    ParticleSystem/Updaters/CameraSortParticleUpdater.cpp
    ParticleSystem/Updaters/ColorParticleUpdater.cpp
    ParticleSystem/Updaters/EulerParticleUpdater.cpp
    ParticleSystem/Updaters/FloorParticleUpdater.cpp
    ParticleSystem/Updaters/PositionColorParticleUpdater.cpp
    ParticleSystem/Updaters/PositionVelocityParticleUpdater.cpp
    ParticleSystem/Updaters/TimeParticleUpdater.cpp
    ParticleSystem/Updaters/UniformScaleParticleUpdater.cpp
    ParticleSystem/Updaters/VelocityColorParticleUpdater.cpp
    ParticleSystem/Updaters/ZSortParticleUpdater.cpp
    Primitives/ArcPrimitive.cpp
    Primitives/ArrowPrimitive.cpp
    Primitives/BoxPrimitive.cpp
    Primitives/ConePrimitive.cpp
    Primitives/CylinderPrimitive.cpp
    Primitives/KleinBottlePrimitive.cpp
    Primitives/MobiusStripPrimitive.cpp
    Primitives/NewellTeapotPrimitive.cpp
    Primitives/ParametricPrimitive.cpp
    Primitives/ParametricSpherePrimitive.cpp
    Primitives/Primitive.cpp
    Primitives/QuadPrimitive.cpp
    Primitives/SpherePrimitive.cpp
    Primitives/TorusPrimitive.cpp
    Primitives/TrefoilKnotPrimitive.cpp
    Rendering/Buffer.cpp
    Rendering/BufferAccessor.cpp
    Rendering/BufferView.cpp
    Rendering/ColorMaskState.cpp
    Rendering/CommandBuffer.cpp
    Rendering/Font.cpp
    Rendering/FrameGraphOperation.cpp
    Rendering/FrameGraphResource.cpp
    Rendering/Image.cpp
    Rendering/ImageManager.cpp
    Rendering/ImageTGA.cpp
    Rendering/ImageView.cpp
    Rendering/IndexBuffer.cpp
    Rendering/Material.cpp
    Rendering/Materials/PrincipledBSDFMaterial.cpp
    Rendering/Materials/PrincipledVolumeMaterial.cpp
    Rendering/Materials/SkyboxMaterial.cpp
    Rendering/Materials/UnlitMaterial.cpp
    Rendering/Materials/WorldGridMaterial.cpp
    Rendering/Operations/Operations_blend.cpp
    Rendering/Operations/Operations_brightPassFilter.cpp
    Rendering/Operations/Operations_channel.cpp
    Rendering/Operations/Operations_computeBRDFLUT.cpp
    Rendering/Operations/Operations_computeBuffer.cpp
    Rendering/Operations/Operations_computeImage.cpp
    Rendering/Operations/Operations_computeIrradianceMap.cpp
    Rendering/Operations/Operations_computePrefilterMap.cpp
    Rendering/Operations/Operations_computeReflectionMap.cpp
    Rendering/Operations/Operations_computeRT.cpp
    Rendering/Operations/Operations_convolution.cpp
    Rendering/Operations/Operations_debug.cpp
    Rendering/Operations/Operations_debugLightCascades.cpp
    Rendering/Operations/Operations_debugShadowAtlas.cpp
    Rendering/Operations/Operations_fetchRenderables.cpp
    Rendering/Operations/Operations_forwardUnlitPass.cpp
    Rendering/Operations/Operations_gaussianBlur.cpp
    Rendering/Operations/Operations_gBufferPass.cpp
    Rendering/Operations/Operations_grayscale.cpp
    Rendering/Operations/Operations_iblPass.cpp
    Rendering/Operations/Operations_invert.cpp
    Rendering/Operations/Operations_lightingPass.cpp
    Rendering/Operations/Operations_present.cpp
    Rendering/Operations/Operations_renderShadowAtlas.cpp
    Rendering/Operations/Operations_shader.cpp
    Rendering/Operations/Operations_softRT.cpp
    Rendering/Operations/Operations_ssao.cpp
    Rendering/Operations/Operations_tonemapping.cpp
    Rendering/Operations/OperationUtils.cpp
    Rendering/Programs/LitShaderProgram.cpp
    Rendering/Programs/SkyboxShaderProgram.cpp
    Rendering/Programs/UnlitShaderProgram.cpp
    Rendering/Renderer.cpp
    Rendering/RenderPass.cpp
    Rendering/RenderQueue.cpp
    Rendering/RenderState.cpp
    Rendering/Sampler.cpp
    Rendering/Shader.cpp
    Rendering/ShaderLocation.cpp
    Rendering/ShaderProgram.cpp
    Rendering/ShaderProgramLibrary.cpp
    Rendering/ShaderUniform.cpp
    Rendering/ShaderUniformImpl.cpp
    Rendering/ShadowMap.cpp
    Rendering/SkinnedMesh.cpp
    Rendering/StorageBuffer.cpp
    Rendering/SystemFont.cpp
    Rendering/Texture.cpp
    Rendering/Uniforms/CameraViewProjectionUniformBuffer.cpp
    Rendering/Uniforms/LightingUniform.cpp
    Rendering/Uniforms/LightUniform.cpp
    Rendering/Uniforms/ModelUniformBuffer.cpp
    Rendering/Uniforms/ModelViewProjectionUniformBuffer.cpp
    Rendering/VertexBuffer.cpp
    Rendering/VertexLayout.cpp
    SceneGraph/Camera.cpp
    SceneGraph/CSGNode.cpp
    SceneGraph/Geometry.cpp
    SceneGraph/Group.cpp
    SceneGraph/Light.cpp
    SceneGraph/Node.cpp
    SceneGraph/Skybox.cpp
    SceneGraph/Switch.cpp
    SceneGraph/Text.cpp
    Simulation/AssetManager.cpp
    Simulation/Console/Commands/EchoConsoleCommand.cpp
    Simulation/Console/Commands/SetConsoleCommand.cpp
    Simulation/Console/Console.cpp
    Simulation/FileSystem.cpp
    Simulation/Input.cpp
    Simulation/Settings.cpp
    Simulation/Simulation.cpp
    Simulation/Systems/CaptureSystem.cpp
    Simulation/Systems/ConsoleSystem.cpp
    Simulation/Systems/DebugSystem.cpp
    Simulation/Systems/RenderSystem.cpp
    Simulation/Systems/StreamingSystem.cpp
    Simulation/Systems/System.cpp
    Simulation/Systems/UISystem.cpp
    Simulation/Systems/UpdateSystem.cpp
    UI/UIBackground.cpp
    UI/UIButton.cpp
    UI/UICanvas.cpp
    UI/UIFrame.cpp
    UI/UIFrameConstraint.cpp
    UI/UIFrameConstraintMaker.cpp
    UI/UILabel.cpp
    Visitors/Apply.cpp
    Visitors/ApplyToGeometries.cpp
    Visitors/BinTreeScene.cpp
    Visitors/ComputeRenderQueue.cpp
    Visitors/FetchCameras.cpp
    Visitors/FetchLights.cpp
    Visitors/IntersectWorld.cpp
    Visitors/NodeVisitor.cpp
    Visitors/ParallelApply.cpp
    Visitors/Picking.cpp
    Visitors/RTAcceleration.cpp
    Visitors/SelectNodes.cpp
    Visitors/ShallowCopy.cpp
    Visitors/StartComponents.cpp
    Visitors/UpdateComponents.cpp
    Visitors/UpdateRenderState.cpp
    Visitors/UpdateWorldState.cpp
)

target_include_directories( crimild_core PUBLIC . )
target_compile_features( crimild_core PUBLIC cxx_std_20 )

add_library( Crimild::Core ALIAS crimild_core )
