SET( CRIMILD_INCLUDE_DIRECTORIES
	${CRIMILD_SOURCE_DIR}/core/src
	${CRIMILD_SOURCE_DIR}/opengl/src
	${CRIMILD_SOURCE_DIR}/imgui/src
	${CRIMILD_SOURCE_DIR}/vulkan/src )

SET( CRIMILD_LIBRARY_LINK_LIBRARIES
	crimild_core
	crimild_opengl
	crimild_vulkan )

IF ( NOT ( ${CMAKE_SYSTEM_NAME} STREQUAL "Emscripten" ) )

    SET( CRIMILD_INCLUDE_DIRECTORIES
	  	 ${CRIMILD_INCLUDE_DIRECTORIES}
	  	 ${CRIMILD_SOURCE_DIR}/third-party/glfw/include
	  	 ${CRIMILD_SOURCE_DIR}/third-party/glew/include )

	SET( CRIMILD_LIBRARY_LINK_LIBRARIES
	  	 ${CRIMILD_LIBRARY_LINK_LIBRARIES}
		 glfw )

	IF ( CRIMILD_ENABLE_IMGUI )
   	   	 SET( CRIMILD_INCLUDE_DIRECTORIES
	  	 	${CRIMILD_INCLUDE_DIRECTORIES}
	  	 	{CRIMILD_SOURCE_DIR}/imgui/src
			${CRIMILD_SOURCE_DIR}/third-party/imgui )
	ENDIF ()

	IF ( CRIMILD_ENABLE_SCRIPTING )

   	   	 SET( CRIMILD_INCLUDE_DIRECTORIES
	  	 	  ${CRIMILD_INCLUDE_DIRECTORIES}
	  	 	  ${CRIMILD_SOURCE_DIR}/scripting/src
	  	 	  ${CRIMILD_SOURCE_DIR}/third-party/lua/src )

	  	 SET( CRIMILD_LIBRARY_LINK_LIBRARIES
	  	   	  ${CRIMILD_LIBRARY_LINK_LIBRARIES}
		   	  crimild_scripting )

	ENDIF ( CRIMILD_ENABLE_SCRIPTING )

	IF ( CRIMILD_ENABLE_PHYSICS )

	   	 SET( CRIMILD_INCLUDE_DIRECTORIES
			  ${CRIMILD_INCLUDE_DIRECTORIES}
		 	  ${CRIMILD_SOURCE_DIR}/physics/src
		 	  ${CRIMILD_SOURCE_DIR}/third-party/bullet-2.82-r2704/src )

		 SET( CRIMILD_LIBRARY_LINK_LIBRARIES
		 	  ${CRIMILD_LIBRARY_LINK_LIBRARIES}
		 	  crimild_physics )

	ENDIF ( CRIMILD_ENABLE_PHYSICS )

	IF ( CRIMILD_ENABLE_SFML )

	   	 SET( CRIMILD_INCLUDE_DIRECTORIES
		 	  ${CRIMILD_INCLUDE_DIRECTORIES}
		 	  ${CRIMILD_SOURCE_DIR}/sfml/src
		 	  ${CRIMILD_SOURCE_DIR}/third-party/sfml/include )

		 SET( CRIMILD_LIBRARY_LINK_LIBRARIES
		 	  ${CRIMILD_LIBRARY_LINK_LIBRARIES}
		 	  crimild_sfml )

	ENDIF ( CRIMILD_ENABLE_SFML )

	IF ( CRIMILD_ENABLE_VULKAN )

		FIND_PACKAGE( Vulkan REQUIRED )

   		SET( CRIMILD_INCLUDE_DIRECTORIES
   			  ${CRIMILD_INCLUDE_DIRECTORIES}
			  ${CRIMILD_SOURCE_DIR}/vulkan/src
			  ${Vulkan_INCLUDE_DIRS}
		)

   		SET( CRIMILD_LIBRARY_LINK_LIBRARIES
   		 	 ${CRIMILD_LIBRARY_LINK_LIBRARIES}
		 	 crimild_vulkan
		 	 ${Vulkan_LIBRARIES}
		 	 #"-framework Metal"
		 	 #"-framework IOSurface"
		 	 #"-framework QuartzCore"
   		)

	ENDIF ()

    IF ( CRIMILD_ENABLE_STB )
       SET( CRIMILD_LIBRARY_LINK_LIBRARIES
		        ${CRIMILD_LIBRARY_LINK_LIBRARIES}
		        crimild_stb
	   )

	   SET(
            CRIMILD_INCLUDE_DIRECTORIES
	 	    ${CRIMILD_INCLUDE_DIRECTORIES}
		    ${CRIMILD_SOURCE_DIR}/stb/src
		    ${CRIMILD_SOURCE_DIR}/third-party/stb
	    )
    ENDIF ()

ENDIF ()

INCLUDE( ModuleBuildLibrary )
